[package]
name = "remoterc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rrc"
path = "src/client.rs"

[[bin]]
name = "remoterc-server"
path = "src/server.rs"


[dependencies]
dirs = "4.0.0"
flate2 = "1.0.24"
tar = "0.4.38"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
jwalk = "0.6.0"