[package]
name = "remoterc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rrc"
path = "src/rrc.rs"

[[bin]]
name = "remoterc-server"
path = "src/remoterc.rs"


[dependencies]
dirs = "4.0.0"
flate2 = "1.0.24"
tar = "0.4.38"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
jwalk = "0.6.0"
regex = "1.5.6"
tokio = { version = "1.19.2", features = ["full", "rt-multi-thread", "macros"] }
url = "2.2.2"
futures = "0.3.21"
futures-util = "0.3.21"
tokio-tungstenite = "0.17.1"
futures-channel = "0.3.21"
cargo_toml = "0.11.5"